--- a/index.CSS
+++ b/index.CSS
@@ -1,19 +1,79 @@
-body {
-    background-image: url("https://i0.wp.com/post.healthline.com/wp-content/uploads/2020/04/low-carb-diet-meal-plan-and-menu-1296x728-feature.jpg?h=1528.jpg")
-    text-align: center;
-    font-family: sans-serif;
-    font-size: 18px;
-    a {
-        text-decoration: none;
-    }
-    header {
-        grid-column-start:1
-        grid-column-end:7
-        display:grid
-        title {
-            margin: auto;
-            color: #dc6363;
-            font-family: Sans-serif;
-            font-size: 2em;
-            font-weight: 700;
-          }
+{
+margin:0;
+padding:0;
+font-family:sans-serif;
+box-sizing:border-box;  
+}
+
+h1{
+  text-align: center;
+  color:green;
+  padding: 20px;
+}
+nav{
+  background-color: lime;
+  display:grid;
+  place-items:center;
+}
+nav ul{
+  list-style-type: style type none;
+}
+nav ul a{
+  display: inline-block;
+  padding: 20px;
+  text-decoration:none;
+  color: #000;
+  transition:0.2s ease-in;
+}
+nav ul a :hover{
+  background-color:green;
+  color: white;
+}
+.items {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  padding: 30px 20px;
+  grid column:gap 20px;
+  grid: row gap 30px;
+}
+.item img{
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+  transform:0.2s ease;
+}
+.item img: hover{
+transform:scale(1.04)
+}
+.item h4{
+ padding: 5px;
+ text-align: center;
+}
+.item button{
+  padding: 5px;
+  border: none;
+  outline: none;
+  background-color: green;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 20px;
+  display: block;
+  margin:0 auto; 
+  transition: 0.2s all;
+}
+.item button: hover{
+ transform:scale(1.08);
+}
+@media screen and (max-width:1000px){
+.items{
+  grid-template-columns: repeat(2 1fr);
+
+   }
+}
+  @media screen and(max-width:100px) {
+.items{
+  grid-template-columns: repeat(2, 1fr);
+}  
+  }
+
